<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vicky.passmanager.SetYourProfileActivity">

<EditText android:id="@+id/emailField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:ems="10"
    android:inputType="text"
    android:hint="@string/email_hint"
    tools:ignore="RtlHardcoded,TextFields">

    <requestFocus></requestFocus>
</EditText>


    <Button android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_up_profile_button"
        tools:ignore="RtlHardcoded"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="64dp"></Button>

    <EditText android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        tools:ignore="RtlHardcoded"
        android:layout_below="@+id/emailField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></EditText>

    <EditText android:id="@+id/sexField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/sex_hint"
        tools:ignore="RtlHardcoded"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></EditText>

    <EditText android:id="@+id/ageField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/age_hint"
        tools:ignore="RtlHardcoded"
        android:layout_below="@+id/sexField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></EditText>


</RelativeLayout>


